--- a/css/style.css
+++ b/css/style.css
@@ -1937,6 +1937,10 @@ mobile dasboard navbar
 }
 
 @media (min-width: 768px) {
+  .c-account {
+    max-width: 400px;
+  }
+
   .c-account-content {
     flex-direction: row;
     align-items: flex-start;
@@ -2138,6 +2142,13 @@ mobile dasboard navbar
   gap: 16px;
   max-width: 302px;
   width: 100%;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .c-form {
+    margin: 0 auto;
+  }
 }
 
 .c-custom-select {
@@ -2720,26 +2731,81 @@ mobile dasboard navbar
 }
 
 .c-notification {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  display: none;
+  position: absolute;
+  top: 80px;
+  right: 45px;
+  max-width: 300px;
+}
+
+.c-notification--topbar {
+  clip-path: polygon(70% 80%, 78% 0%, 86% 80%, 100% 80%, 100% 100%, 0 100%, 0 80%);
+  background: var(--global-color-alpha-xx-light);
   width: 100%;
-  padding: 8px;
-  background: var(--global-color-alpha-x-dark);
-  color: var(--global-color-gray-xxx-light);
-  border-radius: 3px;
-  margin-bottom: 8px;
+  height: 20px;
+  position: relative;
+  top: 2px;
+  border: 10px 10px 0 10px solid var(--global-color-alpha-xx-dark);
+}
+
+.c-notification--top {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.c-notification--content {
+  background: var(--global-color-alpha-xx-light);
+  padding: 16px;
+  border: 10px 10px 0 10px solid var(--global-color-alpha-xx-dark);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .c-notification--text {
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
+  margin-bottom: 8px;
 }
 
 .c-notification--title {
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 20px;
+}
+
+.c-notification--close {
+  text-decoration: none;
+  color: var(--global-color-gray-xxxxx-dark);
+}
+
+.c-notification--buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 8px;
+
+}
+
+.c-notification--button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 4px;
+  border-radius: 3px;
+  border: none;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 18px;
+  color: var(--global-color-gray-xxxx-light);
+  background: var(--global-color-alpha);
+  cursor: pointer;
+}
+
+.u-display--none {
+  display: block !important;
 }
